# briefen

./: .gitignore  CLAUDE.md  README.md
.claude/: settings.json
apps/api/: .env.example  Dockerfile  pyproject.toml
apps/api/app/: main.py  worker.py
apps/api/app/core/: auth.py  config.py
apps/api/app/db/: client.py  models.py
apps/api/app/prompts/: briefen.py  summary.py
apps/api/app/routes/: briefens.py  channels.py  icps.py  jobs.py  videos.py
apps/api/app/services/: channels.py  jobs.py  strategist.py  summarizer.py  transcript.py  youtube.py
apps/web/: middleware.ts  package-lock.json  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/(app)/: layout.tsx
apps/web/app/(app)/briefens/: page.tsx
apps/web/app/(app)/channels/: page.tsx
apps/web/app/(app)/icps/: page.tsx
apps/web/app/(auth)/login/: page.tsx
apps/web/app/auth/callback/: route.ts
apps/web/components/: job-status.tsx  nav-link.tsx  theme-toggle.tsx
apps/web/components/brand/: wordmark.tsx
apps/web/components/briefens/: briefen-card.tsx  briefen-pending.tsx  briefen-wizard.tsx  markdown-prose.tsx
apps/web/components/channels/: add-channel-button.tsx  channel-card.tsx  channel-sync-status.tsx  sync-button.tsx  video-table.tsx
apps/web/components/icps/: icp-card.tsx  icp-form.tsx
apps/web/components/videos/: reprocess-button.tsx  transcript-collapse.tsx
apps/web/lib/: api-client.ts  formatters.ts  types.ts
apps/web/lib/supabase/: server.ts
supabase/migrations/: 0001_initial.sql  0002_fixes.sql  0003_grants.sql  0004_transcript_sources.sql
(+6 files in other folders)
