[project]
name = "briefen-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
    "supabase>=2.10.0",
    "asyncpg>=0.30.0",
    "python-jose[cryptography]>=3.3.0",
    "google-api-python-client>=2.163.0",
    "youtube-transcript-api>=1.0.0",
    "groq>=0.14.0",
    "anthropic>=0.46.0",
    "yt-dlp>=2025.1.1",
    "assemblyai>=0.34.0",
    "pypdf>=5.0.0",
    "python-docx>=1.1.0",
    "python-multipart>=0.0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
